# IAVocal-mcp

./: LICENSE  README.md  pyproject.toml
scripts/: check_upstream.py
src/vicsia_email_mcp/: __init__.py  __main__.py  server.py
src/vicsia_email_mcp/auth/: _crypto_bridge.py  callback_page.py  google_callback.py  google_oauth.py  ms_token.py
src/vicsia_email_mcp/providers/: gmail.py  outlook.py
tests/: test_crypto_bridge.py  test_gmail_provider.py  test_outlook_provider.py  test_server.py  test_text_utils.py
