[project]
name = "vicsia-email-mcp"
version = "0.2.0"
description = "Minimal email & calendar MCP server — Gmail + Outlook, 6 unified tools"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "cryptography>=41.0.0",
]

[project.scripts]
vicsia-email-mcp = "vicsia_email_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vicsia_email_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
